--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png">
+			<img src="./assets/images/camera.webp">
 		</div>
 	</div>
 </div>
