--- a/index.html
+++ b/index.html
@@ -4,12 +4,73 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Nina Carducci - photographe professionnelle - Bordeaux</title>
+	<meta name="description" content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
+	<meta name="keywords" content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
+	<meta name="author" content="Nina Carducci">
+
+	<!-- Open Graph data pour Facebook - Instagram -->
+	<meta property="og:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="fr_FR">
+	<meta property="og:description" content="Nina Carducci - Photographe. Saisir des moments précieux et les rendre immortels.">
+	<meta property="og:url" content="https://dodge74-dro.github.io/ninaCarducci/">
+	<meta property="og:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
+	<meta property="og:site_name" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<!-- Instagram -->
+	<meta name="instagram:title" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<meta name="instagram:site" content="@ninacarducci.photo">
+	<meta name="instagram:caption" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<!-- Twitter -->
+	<meta property="twitter:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:description" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<meta property="twitter:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
+
+	<!-- Styles and Fonts -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<title>Nina Carducci - Photographe</title>
+	<!-- Rich Snippets -->
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci Photographe",
+			"image": "https://github.com/haf-84/nina-carducci/blob/main/assets/images/nina.webp",
+			"@id": "https://github.com/haf-84/nina-carducci/blob/main/assets/images/nina.webp",
+			"url": "https://github.com/haf-84/nina-carducci/",
+			"telephone": "05 56 67 78 89",
+			"priceRange": "50€ 400€",
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": 44.8465743,
+				"longitude": -0.6065366999999999
+			},
+			"openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+					"Monday",
+					"Tuesday",
+					"Wednesday",
+					"Thursday",
+					"Friday"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			},
+			"sameAs": "https://www.instagram.com/ninacarducci.photo/"
+		}
+	</script>
 </head>
 
 <body>
