compression images webp

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- résout pbm affichage tjs 100% largeur -->
 	<title>Nina Carducci - photographe professionnelle - Bordeaux</title>
 	<meta name="description" content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
 	<meta name="keywords" content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
 	<meta name="author" content="Nina Carducci">
 
-	<!-- Open Graph data pour Facebook - Instagram -->
+	<!-- Open Graph data pour Facebook -->
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
 	<meta property="og:type" content="website">
 	<meta property="og:locale" content="fr_FR">
@@ -33,6 +33,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+
+	<!-- Scripts (jQuery inclus avant les autres pour éviter les dépendances manquantes) -->
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
+
 	<!-- Rich Snippets -->
 	<script type="application/ld+json">
 		{
@@ -249,11 +256,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
 </body>
 
 </html>
