début SEO suite

--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
 	<title>Nina Carducci - photographe professionnelle - Bordeaux</title>
 	<meta name="description" content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
 	<meta name="keywords" content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
-	<meta name="author" content="Nina Carducci">
 
 	<!-- Open Graph data pour Facebook -->
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
-	<meta property="og:type" content="website">
 	<meta property="og:locale" content="fr_FR">
 	<meta property="og:description" content="Nina Carducci - Photographe. Saisir des moments précieux et les rendre immortels.">
 	<meta property="og:url" content="https://dodge74-dro.github.io/ninaCarducci/">
-	<meta property="og:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
 	<meta property="og:site_name" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<meta property="og:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
+
 	<!-- Instagram -->
 	<meta name="instagram:title" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
 	<meta name="instagram:site" content="@ninacarducci.photo">
 	<meta name="instagram:caption" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+
 	<!-- Twitter -->
-	<meta property="twitter:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:description" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
-	<meta property="twitter:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
+	<meta name="twitter:site" content="@ninacarducci.photo">
+	<meta name="twitter:description" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<meta name="twitter:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
 
 	<!-- Styles and Fonts -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
