--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- résout pbm affichage tjs 100% largeur -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- résout pbm affichage tjs 100% largeur -->
 	<title>Nina Carducci - photographe professionnelle - Bordeaux</title>
-	<meta name="description" content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
-	<meta name="keywords" content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
+	<meta name="description"
+		content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
+	<meta name="keywords"
+		content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
 
 	<!-- Open Graph data pour Facebook -->
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
 	<meta property="og:locale" content="fr_FR">
-	<meta property="og:description" content="Nina Carducci - Photographe. Saisir des moments précieux et les rendre immortels.">
+	<meta property="og:description"
+		content="Nina Carducci - Photographe. Saisir des moments précieux et les rendre immortels.">
 	<meta property="og:url" content="https://dodge74-dro.github.io/ninaCarducci/">
-	<meta property="og:site_name" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<meta property="og:site_name"
+		content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
 	<meta property="og:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
 
 	<!-- Instagram -->
@@ -31,23 +36,24 @@
 	<!-- Styles and Fonts -->
 
 	<!-- fournir en cache du CSS et du JS compilés de Bootstrap -->
-	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+		rel="stylesheet">
 
 	<!-- Scripts (jQuery inclus avant les autres pour éviter les dépendances manquantes) -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-	<!-- fournir en cache du CSS et du JS compilés -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<!-- fournir en cache du CSS et du JS compilés MEME PERFORMANCE -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+	<script src="./assets/maugallery.min.js" defer></script>
+	<script src="./assets/scripts.min.js" defer></script>
 
 	<!-- Rich Snippets -->
 	<script type="application/ld+json">
@@ -105,7 +111,6 @@
 			</div>
 		</div>
 		<div id="header">
-
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -117,27 +122,24 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-							alt="image Ryoji Iwata">
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="image Ryoji Iwata">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
-							alt="image Nicolas Green">
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="image Nicolas Green">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
-							class="d-block w-100" alt="image Edwards Cisneros">
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"	class="d-block w-100" alt="image Edwards Cisneros">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 					data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
+					<span class="hidden-overflow">Previous</span>
 				</button>
 				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide="next">
+					data-bs-slide="next" name="Next picture">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
+					<span class="hidden-overflow">Next</span>
 				</button>
 			</div>
 		</div>
@@ -165,35 +167,42 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="image concert Aaron Paul"/>
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+						alt="image concert Aaron Paul" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="image ets Ali Morshedlou"/>
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+						alt="image ets Ali Morshedlou" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="image ets Jason Goodman"/>
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+						alt="image ets Jason Goodman" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="image mariage Hanna Busing"/>
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+						alt="image mariage Hanna Busing" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="image portrait Ade Tunji"/>
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+						alt="image portrait Ade Tunji" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="image mariage Jakob Owens"/>
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+						alt="image mariage Jakob Owens" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="image portrait Nino Van"/>
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+						alt="image portrait Nino Van" />
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="image concert Austin Neil"/>
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+						alt="image concert Austin Neil" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="image ets Mateus Campos Felipe"/>
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+						alt="image ets Mateus Campos Felipe" />
 				</div>
 			</div>
 			<div class="quote">
-				<figure>
-					<blockquote>
-						<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
-							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
-							vérité.</h3>
-					</blockquote>
-					<figcaption class="quote__author">- Richard Avedon</figcaption>
-				</figure>
+				<blockquote>
+					<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
+						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+						vérité.</h3>
+				</blockquote>
+				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</div>
 		</section>
 		<section id="services">
@@ -236,13 +245,11 @@
 			</div>
 		</section>
 		<section class="quote">
-			<figure>
-				<blockquote>
-					<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
-				</blockquote>
-				<figcaption class="quote__author">- Richard Avedon</figcaption>
-			</figure>
+			<blockquote>
+				<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+					traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
+			</blockquote>
+			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</section>
 	</main>
 	<footer id="contact">
@@ -261,7 +268,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp"  alt="image appareil photo">
+				<img src="./assets/images/camera.webp" alt="image appareil photo">
 			</div>
 		</div>
 	</footer>
