--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 	<!-- fournir en cache du CSS et du JS compilés MEME PERFORMANCE -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
 
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.min.js" defer></script>
@@ -106,7 +106,7 @@
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
+							target="_blank"><img src="assets/images/instagram.svg" alt="logo instagram"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -122,13 +122,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="image Ryoji Iwata">
+						<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="image Ryoji Iwata">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="image Nicolas Green">
+						<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="image Nicolas Green">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"	class="d-block w-100" alt="image Edwards Cisneros">
+						<img src="./assets/images/slider/edward-cisneros.webp"	class="d-block w-100" alt="image Edwards Cisneros">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -167,31 +167,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+						src="./assets/images/gallery/concerts/aaron-paul.webp"
 						alt="image concert Aaron Paul" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+						src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
 						alt="image ets Ali Morshedlou" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+						src="./assets/images/gallery/entreprise/jason-goodman.webp"
 						alt="image ets Jason Goodman" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+						src="./assets/images/gallery/mariage/hannah-busing.webp"
 						alt="image mariage Hanna Busing" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+						src="./assets/images/gallery/portraits/ade-tunji.webp"
 						alt="image portrait Ade Tunji" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+						src="./assets/images/gallery/mariage/jakob-owens.webp"
 						alt="image mariage Jakob Owens" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
 						alt="image portrait Nino Van" />
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+						src="./assets/images/gallery/concerts/austin-neill.webp"
 						alt="image concert Austin Neil" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
 						alt="image ets Mateus Campos Felipe" />
 				</div>
 			</div>
