--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- résout pbm affichage tjs 100% largeur -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci - photographe professionnelle - Bordeaux</title>
 	<meta name="description"
 		content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
@@ -62,10 +62,10 @@
 			"@type": "LocalBusiness",
 			"name": "Nina Carducci Photographe",
 			"image": "https://github.com/haf-84/nina-carducci/blob/main/assets/images/nina.webp",
-			"@id": "https://github.com/haf-84/nina-carducci/blob/main/assets/images/nina.webp",
+			"@id": "https://dodge74-dro.github.io/ninaCarducci/",
 			"url": "https://github.com/haf-84/nina-carducci/",
-			"telephone": "05 56 67 78 89",
-			"priceRange": "50€ 400€",
+			"telephone": "+33 5 56 67 78 89",
+			"priceRange": "€50 - €400",
 			"address": {
 				"@type": "PostalAddress",
 				"streetAddress": "68 avenue Alsace-Lorraine",
@@ -105,20 +105,16 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.svg" alt="logo instagram"></a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.svg" alt="logo instagram"></a></li>
 				</ul>
 			</div>
 		</div>
 		<div id="header">
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-						class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-						aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-						aria-label="Slide 3"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
@@ -131,13 +127,11 @@
 						<img src="./assets/images/slider/edward-cisneros.webp"	class="d-block w-100" alt="image Edwards Cisneros">
 					</div>
 				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide="prev">
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" name="Previous picture">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="hidden-overflow">Previous</span>
 				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide="next" name="Next picture">
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" name="Next picture">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="hidden-overflow">Next</span>
 				</button>
@@ -147,9 +141,9 @@
 	<main>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="image protrait Nina Carducci">
+				<img src="./assets/images/nina.webp" alt="protrait Nina Carducci">
 			</div>
-			<div id="about-me">
+			<section id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
 				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
@@ -160,7 +154,7 @@
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
 					approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du
 					bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-			</div>
+			</section>
 		</div>
 		<section id="gallery">
 			<h2 class="title">Portfolio</h2>
@@ -168,34 +162,34 @@
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul.webp"
-						alt="image concert Aaron Paul" />
+						alt="concert Aaron Paul" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
-						alt="image ets Ali Morshedlou" />
+						alt="entreprise Ali Morshedlou" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman.webp"
-						alt="image ets Jason Goodman" />
+						alt="entreprise Jason Goodman" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing.webp"
-						alt="image mariage Hanna Busing" />
+						alt="mariage Hanna Busing" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji.webp"
-						alt="image portrait Ade Tunji" />
+						alt="portrait Ade Tunji" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens.webp"
-						alt="image mariage Jakob Owens" />
+						alt="mariage Jakob Owens" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
-						alt="image portrait Nino Van" />
+						alt="portrait Nino Van" />
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill.webp"
-						alt="image concert Austin Neil" />
+						alt="concert Austin Neil" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
-						alt="image ets Mateus Campos Felipe" />
+						alt="entreprise Mateus Campos Felipe" />
 				</div>
 			</div>
-			<div class="quote">
+			<figure class="quote">
 				<blockquote>
 					<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
@@ -203,7 +197,7 @@
 						vérité.</h3>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
-			</div>
+			</figure>
 		</section>
 		<section id="services">
 			<h2 class="title">Mes services</h2>
@@ -211,7 +205,7 @@
 				<div class="service">
 					<div class="service__description">
 						<h3>Shooting photo</h3>
-						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable.<br><br>Je me déplace
 							en Île-de-France pour réaliser vos photos</p>
 					</div>
 					<div class="service__price">
@@ -223,7 +217,7 @@
 				<div class="service">
 					<div class="service__description">
 						<h3>Retouches</h3>
-						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ?<br><br>Bénéficier d’un rendu
 							optimal pour vos publications</p>
 					</div>
 					<div class="service__price">
@@ -244,31 +238,31 @@
 				</div>
 			</div>
 		</section>
-		<section class="quote">
+		<figure class="quote">
 			<blockquote>
 				<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
 					traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
-		</section>
+		</figure>
 	</main>
 	<footer id="contact">
 		<div class="container">
 			<div class="form-container">
-				<h4>Une question ? Une demande de devis ?</h4>
-				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+				<h4>Envie d'en savoir plus, besoin d'un devis ... ?</h4>
+				<p> N’hésitez pas, écrivez-moi ! réponse rapide assurée !</p>
 				<form action="" method="post">
 					<label for="nom">Nom</label>
-					<input type="text" name="nom" id="nom" autocomplete="name">
+					<input type="text" name="nom" id="nom" autocomplete="name" required>
 					<label for="email">Email</label>
-					<input type="email" name="email" id="email" autocomplete="email">
+					<input type="email" name="email" id="email" autocomplete="email" required>
 					<label for="message">Message</label>
-					<textarea name="message" id="message" cols="30" rows="10" autocomplete="off"></textarea>
+					<textarea name="message" id="message" cols="30" rows="10" autocomplete="off" required></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="image appareil photo">
+				<img src="./assets/images/camera.webp" alt="appareil photo reflex">
 			</div>
 		</div>
 	</footer>
