--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
 		rel="stylesheet">
 
 	<!-- Scripts (jQuery inclus avant les autres pour éviter les dépendances manquantes) -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/17.6.0/lazyload.min.js"></script>
+	
 	<!-- fournir en cache du CSS et du JS compilés MEME PERFORMANCE -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
-
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.min.js" defer></script>
 
@@ -118,13 +117,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="image Ryoji Iwata">
+						<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="image Ryoji Iwata" loading="lazy">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="image Nicolas Green">
+						<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="image Nicolas Green" loading="lazy">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros.webp"	class="d-block w-100" alt="image Edwards Cisneros">
+						<img src="./assets/images/slider/edward-cisneros.webp"	class="d-block w-100" alt="image Edwards Cisneros" loading="lazy">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" name="Previous picture">
@@ -160,33 +159,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul.webp"
-						alt="concert Aaron Paul" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
-						alt="entreprise Ali Morshedlou" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman.webp"
-						alt="entreprise Jason Goodman" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing.webp"
-						alt="mariage Hanna Busing" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji.webp"
-						alt="portrait Ade Tunji" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens.webp"
-						alt="mariage Jakob Owens" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
-						alt="portrait Nino Van" />
-					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill.webp"
-						alt="concert Austin Neil" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
-						alt="entreprise Mateus Campos Felipe" />
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="concert Aaron Paul"  loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="entreprise Ali Morshedlou"  loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="entreprise Jason Goodman" loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="mariage Hanna Busing" loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" alt="portrait Ade Tunji" loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" alt="mariage Jakob Owens" loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"	alt="portrait Nino Van" loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="concert Austin Neil" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"	alt="entreprise Mateus Campos Felipe" loading="lazy"/>
 				</div>
 			</div>
 			<figure class="quote">
