loading lazy img 2

--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
 	<!-- résout pbm affichage tjs 100% largeur -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci - photographe professionnelle - Bordeaux</title>
-	<meta name="description"
-		content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
-	<meta name="keywords"
-		content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
+	<meta name="description" content="Donnez vie à vos souvenirs avec les services de photographie professionnelle de Nina Carducci à Bordeaux. Nous capturons vos moments les plus précieux avec notre expertise en shooting photo, retouche et album photo personnalisé. Contactez-nous dès aujourd'hui pour créer des souvenirs intemporels !">
+	<meta name="keywords" content="photographe, photographie, portrait, mariage, événement, entreprise, retouche, album photo, Bordeaux">
 
 	<!-- Open Graph data pour Facebook -->
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle - Bordeaux">
 	<meta property="og:locale" content="fr_FR">
-	<meta property="og:description"
-		content="Nina Carducci - Photographe. Saisir des moments précieux et les rendre immortels.">
+	<meta property="og:description" content="Nina Carducci - Photographe. Saisir des moments précieux et les rendre immortels.">
 	<meta property="og:url" content="https://dodge74-dro.github.io/ninaCarducci/">
-	<meta property="og:site_name"
-		content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
+	<meta property="og:site_name" content="Nina Carducci - Photographe professionnel à Bordeaux : shooting, retouche et album pour créer des souvenirs intemporels">
 	<meta property="og:image" content="https://dodge74-dro.github.io/ninaCarducci/assets/images/preview.webp">
 
 	<!-- Instagram -->
@@ -47,7 +43,6 @@
 
 	<!-- Scripts (jQuery inclus avant les autres pour éviter les dépendances manquantes) -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/17.6.0/lazyload.min.js"></script>
 	
 	<!-- fournir en cache du CSS et du JS compilés MEME PERFORMANCE -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
@@ -159,7 +154,7 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="concert Aaron Paul"  loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="concert Aaron Paul" loading="lazy"/>
 					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="entreprise Ali Morshedlou"  loading="lazy"/>
 					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="entreprise Jason Goodman" loading="lazy"/>
 					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="mariage Hanna Busing" loading="lazy"/>
